<!--
  ~ Copyright 2016 Bobby
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">Officebuy</string>

    <string name="desc_bg">Background Image</string>
    <string name="desc_logo">Logo Image</string>
    <string name="desc_header_nav">Navigation Header Background Image</string>
    <string name="desc_dp">Profile Icon</string>
    <string name="desc_header_view_orders">View Orders Header Image</string>
    <string name="desc_profile_camera">Camera Icon</string>

    <string name="title_activity_profile">Profile</string>

    <string name="hint_email">Email</string>
    <string name="hint_pass">Password</string>

    <string name="error_email_empty">Email cannot be empty</string>
    <string name="error_email_invalid">Email is invalid</string>
    <string name="error_pass_empty">Password cannot be empty</string>
    <string name="error_pass_invalid">Password must have min 6 chars</string>

    <string name="menu_view_orders">View Orders</string>
    <string name="menu_active_bids">Active Bids</string>
    <string name="menu_previous_bids">Previous Bids</string>
    <string name="menu_successful_bids">Successful Bids</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_contact_us">Contact Us</string>

    <string name="action_profile">Profile</string>
    <string name="action_logout">Logout</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="btn_login">Login</string>
    <string name="btn_reset_pass">Reset Password</string>

    <string name="text_forgot_pass">Forgot Password?</string>
    <string name="text_back_login">Go back to Login</string>
    <string name="text_header_view_orders">Place your bids\n&amp;\nIncrease your sales</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
