<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Bobby
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="in.codehex.facilis.LoginActivity">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="@color/shade_black">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/desc_bg"
                android:scaleType="centerCrop"
                android:src="@drawable/bg"/>

    </FrameLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/secondary_margin"
            android:gravity="center"
            android:orientation="vertical">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/secondary_margin"
                android:adjustViewBounds="true"
                android:contentDescription="@string/desc_logo"
                android:scaleType="centerCrop"
                android:src="@drawable/logo"/>

        <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/secondary_margin"
                android:background="@color/shade_white"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="@dimen/primary_padding"
                android:drawableStart="@drawable/ic_email"
                android:focusable="true"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/secondary_padding"
                android:textColor="@android:color/white"
                android:textColorHint="@color/hint_white"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/primary_text"/>

        <EditText
                android:id="@+id/edit_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/shade_white"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="@dimen/primary_padding"
                android:drawableStart="@drawable/ic_lock"
                android:focusable="true"
                android:hint="@string/hint_pass"
                android:inputType="textPassword"
                android:padding="@dimen/secondary_padding"
                android:textColor="@android:color/white"
                android:textColorHint="@color/hint_white"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/primary_text"/>

        <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/secondary_margin"
                android:text="@string/btn_login"
                android:theme="@style/LoginButton"/>

    </LinearLayout>

    <TextView
            android:id="@+id/text_forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/primary_margin"
            android:gravity="center"
            android:padding="@dimen/primary_margin"
            android:text="@string/text_forgot_pass"
            android:textColor="@android:color/white"/>

</RelativeLayout>
